<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PCED Pali tipitaka dictionary ver 1.91</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">Look up</string>
    <string name="search">Search</string>
    <string name="tipitaka">Tipitaka</string>
    <string name="apptitle">PCED Pali tipitaka dictionary ver 1.91</string>
    <string name="dict">Dictionary</string>
    <string name="paraNO">Paragraph:</string>
    <string name="vripage">VRI PAGE:</string>
    <string name="ptspage">PTS PAGE:</string>
    <string name="thaipage">Thai PAGE:</string>
    <string name="gooto">Go to</string>
    <string name="edtsearch">words split space search in pali tipitaka</string>
    <string name="get">Get</string>
    <string name="word">input word</string>
    <string name="findnext">FIND/NEXT</string>
    <string name="prev">PREV</string>
    <string name="navmula">mula/anna</string>
    <string name="navatth">atth</string>
    <string name="navtika">tika</string>
    <string name="navsearch">search result</string>
    <string name="navcontext">context</string>
    <string name="tipicata">Pali Tipitaka catalog</string>
    <string name="backabovedirectory">back to above directory</string>
    <string name="dicttitle">Pali Dictionary</string>
    <string name="edtLookupWord">input word look up in dictionary</string>
    <string name="lookup">Look up</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>

</resources>
