<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/catalog"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/tipitaka"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/mainwintitle"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:layout_centerVertical="true"
                android:text="@string/apptitle"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/dict"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/dict"
                android:textSize="12sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/splist"
                android:entries="@array/spdata"
                android:layout_centerVertical="true"
                android:layout_marginLeft="58dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/sptxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/splist"
                android:width="70dp"
                android:textSize="14sp"
                android:hint="1.0105"
                android:inputType="number|numberDecimal"
                android:paddingLeft="10dp"
                android:singleLine="true" />
            <Button
                android:id="@+id/imgto"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/sptxt"
                android:textSize="12sp"
                android:text="@string/gooto" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sptxtword"
                android:width="270dp"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="14sp"
                android:hint="@string/edtsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnsearch"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/sptxtword"
                android:text="@string/search"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etxtdocid"
                android:layout_alignParentLeft="true"
                android:inputType="number"
                android:width="66dp"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:textSize="14sp"
                android:hint="123456"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnget"
                android:layout_toRightOf="@+id/etxtdocid"
                android:text="@string/get"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edtxtfind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/btnget"
                android:width="100dp"
                android:hint="@string/word"
                android:singleLine="true"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnfind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/edtxtfind"
                android:text="@string/findnext"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnprev"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/btnfind"
                android:text="@string/prev"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <WebView
                android:id="@+id/webviewMula"
                android:layout_above="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </WebView>
            <WebView
                android:id="@+id/webviewAtth"
                android:layout_above="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </WebView>
            <WebView
                android:id="@+id/webviewTika"
                android:layout_above="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </WebView>
            <WebView
                android:id="@+id/webviewMaintxt"
                android:layout_above="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </WebView>
            <WebView
                android:id="@+id/webviewMain"
                android:layout_above="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </WebView>
            <ProgressBar
                android:id="@+id/jiazaibar"
                android:visibility="invisible"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/mainwinbottom"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <TextView
                    android:text="PAGE:"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:visibility="gone"
                android:layout_height="32dp"
                android:layout_above="@+id/nav_view"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnmaintxt"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textSize="10sp"
                    android:text="切换主/副读经窗口（当前为主窗口）" />
            </LinearLayout>

            <!--  app:itemIconTint="@color/nav_item"
                app:itemTextColor="@color/nav_item"  -->

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemRippleColor="@null"
                app:menu="@menu/bottom_nav_menu" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="?android:attr/windowBackground"
        android:orientation="horizontal">
        <com.peiyh.pcedandcanon.OneRelativeLayout
            android:id="@+id/relativeLayoutcanon1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CanonActivity" >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/muluwintitle"
                        android:text="@string/tipicata"
                        android:layout_width="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/muluclose"
                        android:src="@android:drawable/ic_menu_close_clear_cancel"
                        android:layout_alignParentRight="true"
                        android:layout_width="50dp"
                        android:layout_height="50dp">
                    </ImageView>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/llshift1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btncodepali"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="pali catalog" />
                        <Button
                            android:id="@+id/btncodechinese"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="中文目录"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <!--下面两个组件margin皆设为-2dp让接缝相错，避免点击事件漏到滑板下层的窗体
                                            android:layout_marginTop="-2dp"
                                                                    android:layout_marginBottom="-2dp"
                                            android:background="?android:attr/windowBackground"
                                                android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                                                android:scrollbarThumbVertical="@drawable/gray"
                    -->
                    <LinearLayout
                        android:id="@+id/llshift3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/llshift1"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btnBackAbove"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/backabovedirectory" />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMulu"
                        android:layout_below="@id/llshift3"
                        android:scrollbarSize="3dp"
                        android:scrollbars="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <!--sans serif monospace-->
                    <ListView
                        android:id="@+id/lvMulu"
                        android:layout_below="@id/rvMulu"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <ProgressBar
                        android:id="@+id/jiazaibarmulu"
                        android:visibility="invisible"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </com.peiyh.pcedandcanon.OneRelativeLayout>
    </LinearLayout>

    <!--android:layout_marginLeft="-32dp"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="right"
        android:background="?android:attr/windowBackground"
        android:layout_height="match_parent">

        <com.peiyh.pcedandcanon.OneRelativeLayout
            android:id="@+id/relativeLayoutcanon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CanonActivity" >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/dictwintitle"
                        android:text="@string/dicttitle"
                        android:layout_width="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/dictclose"
                        android:src="@android:drawable/ic_menu_close_clear_cancel"
                        android:layout_alignParentLeft="true"
                        android:layout_width="50dp"
                        android:layout_height="50dp">
                    </ImageView>
                </RelativeLayout>
                <EditText
                    android:id="@+id/editTextcanon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:singleLine="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:paddingLeft="5dp"
                    android:textSize="18sp"
                    android:hint="@string/edtLookupWord" >
                    <requestFocus />
                </EditText>

                <WebView
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/webViewcanon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/editTextcanon" />
            </LinearLayout>
        </com.peiyh.pcedandcanon.OneRelativeLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>